Added Header Design

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
   <body>
     <header >
       <h1 align="center"> B&B Tiny Houses Time Sheet </h1>
+      <img src="logo.png"  height="100px" class="center" >
     </header>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
